--- a/index.html
+++ b/index.html
@@ -21,11 +21,13 @@
 
     <marquee scrollamount="13" behavior="" direction="">Fake it, until Make it...</marquee>
     <div class="projects">
-        <p> Total project : 6 </p>
+        <p> Total project : 8 </p>
         <!-- <br> -->
         <br>
         <b style="color: darkred;font-size: 4vh;">Page view</b>
         <br>
+        <br>
+        => Are you Dumb ? : <a href="https://sanjeetprajapati.github.io/Dumb/">click</a>
         <br>
         => Colour Picker/selector : <a href="https://sanjeetprajapati.github.io/colours-selector/" target="_blank"
             rel="noopener noreferrer">click</a>
@@ -54,6 +56,9 @@
         <br>
         <b style="color: darkred;font-size: 4vh;">Codes : </b>
         <br>
+        <br>
+        >> Are you Dumb? :
+        <a href="https://github.com/SanjeetPrajapati/Dumb">click</a>
         <br>
         >> colour picker / selector : <a href="https://github.com/SanjeetPrajapati/colours-selector" target="_blank"
             rel="noopener noreferrer">click</a>
