--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <b style="color: darkred;font-size: 4vh;">Page view</b>
         <br>
         <br>
-        => Are you Dumb ? : <a href="https://sanjeetprajapati.github.io/Dumb/">click</a>
+        => Are you Dumb ? : <a target="_blank" href="https://sanjeetprajapati.github.io/Dumb/">click</a>
         <br>
         => Colour Picker/selector : <a href="https://sanjeetprajapati.github.io/colours-selector/" target="_blank"
             rel="noopener noreferrer">click</a>
@@ -58,7 +58,7 @@
         <br>
         <br>
         >> Are you Dumb? :
-        <a href="https://github.com/SanjeetPrajapati/Dumb">click</a>
+        <a target="_blank" href="https://github.com/SanjeetPrajapati/Dumb">click</a>
         <br>
         >> colour picker / selector : <a href="https://github.com/SanjeetPrajapati/colours-selector" target="_blank"
             rel="noopener noreferrer">click</a>
