number guessing game

--- a/index.html
+++ b/index.html
@@ -21,27 +21,38 @@
 
     <marquee scrollamount="13" behavior="" direction="">Fake it, until Make it...</marquee>
     <div class="projects">
-        <p> Total project : 8 </p>
+        <p> Total project : 9 </p>
         <!-- <br> -->
         <br>
         <b style="color: darkred;font-size: 4vh;">Page view</b>
         <br>
         <br>
+        
+        => Number Guessing game python :
+        <a target="_blank" href="https://github.com/SanjeetPrajapati/Number-guessing-game">click</a>
+        <br>
+        
         => Are you Dumb ? : <a target="_blank" href="https://sanjeetprajapati.github.io/Dumb/">click</a>
         <br>
+
         => Colour Picker/selector : <a href="https://sanjeetprajapati.github.io/colours-selector/" target="_blank"
             rel="noopener noreferrer">click</a>
         <br>
+
         => Calculator JS : <a target="_blank" href="https://sanjeetprajapati.github.io/Javascript-calculator/">click</a>
         <br>
+
         => Calculator using select key : <a target="_blank"
             href="https://sanjeetprajapati.github.io/arithmatic-operator/">click</a>
         <br>
+
         => Arithmatic operator using buttons : <a target="_blank"
             href="https://sanjeetprajapati.github.io/arithmatic-using-buttons-/">click</a>
         <br>
+
         => Digital clock : <a target="_blank" href="https://sanjeetprajapati.github.io/Digital-Clock/">Click</a>
         <br>
+
         => contact form : <a target="_blank" href="https://sanjeetprajapati.github.io/contact-form/">Click</a>
         <br>
 
@@ -57,18 +68,27 @@
         <b style="color: darkred;font-size: 4vh;">Codes : </b>
         <br>
         <br>
+
+        >> Number Guessing game python :
+        <a target="_blank" href="https://github.com/SanjeetPrajapati/Number-guessing-game">click</a>
+        <br>
+
         >> Are you Dumb? :
         <a target="_blank" href="https://github.com/SanjeetPrajapati/Dumb">click</a>
         <br>
+
         >> colour picker / selector : <a href="https://github.com/SanjeetPrajapati/colours-selector" target="_blank"
             rel="noopener noreferrer">click</a>
         <br>
+
         >> Calculator JS : <a href="https://github.com/SanjeetPrajapati/Javascript-calculator" target="_blank"
             rel="noopener noreferrer">click</a>
         <br>
+
         >> Calculator using select key : <a href="https://github.com/SanjeetPrajapati/arithmatic-operator"
             target="_blank" rel="noopener noreferrer">click</a>
         <br>
+
         >> Arithmatic operator using buttons : <a href="https://github.com/SanjeetPrajapati/arithmatic-using-buttons-"
             target="_blank" rel="noopener noreferrer">click</a>
         <br>
