--- a/connect.html
+++ b/connect.html
@@ -20,7 +20,7 @@
     <br>
     <div class="view">
         <div class="img">
-            <img src="image/red shirt.jpg" alt="">
+            <img src="image/me.jfif" alt="">
 
 
         </div>
