insta pic updated

--- a/connect.html
+++ b/connect.html
@@ -26,7 +26,7 @@
         </div>
         <div class="links">
     
-            <a href="https://www.instagram.com/coder_sanjeet/"><img src="image/insta.png" alt="instagram"></a>
+            <a href="https://www.instagram.com/coder_sanjeet/"><img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="instagram"></a>
             <br>
 
             <a href="https://www.linkedin.com/in/sanjeet-prajapati-895a27243/"><img src="image/linkedin.png" alt="linkedin"></a>
