--- a/index.html
+++ b/index.html
@@ -25,15 +25,19 @@
     <a href=""><img id="right" src="image/coder_sanjeet.png" alt=""></a>
     <hr>
     <div class="left">
-   <span>SANJEET</span>
+   <!-- <span>SANJEET</span> -->
     </div>
 
     <div class="projects">
-        <p> Total project : 9 </p>
+        <p> Total project : 10 </p>
         <!-- <br> -->
         <br>
         <b style="color: darkred;font-size: 4vh;">Page view</b>
         <br>
+        <br>
+       
+        => Stop-Watch :
+        <a target="_blank" href="https://sanjeetprajapati.github.io/Stop-Watch/">click</a>
         <br>
 
         => Number Guessing game python :
@@ -66,7 +70,7 @@
 
         => Fitness Web : <a target="_blank" href="https://sanjeetprajapati.github.io/fitness-web/">Click</a>
 
-
+<!-- .................................................................. -->
 
 
     </div>
@@ -75,6 +79,10 @@
         <br>
         <b style="color: darkred;font-size: 4vh;">Codes : </b>
         <br>
+        <br>
+
+        >> Stop-Watch :
+        <a target="_blank" href="https://github.com/SanjeetPrajapati/Stop-Watch">click</a>
         <br>
 
         >> Number Guessing game python :
