--- a/index.html
+++ b/index.html
@@ -29,13 +29,17 @@
     </div>
 
     <div class="projects">
-        <p> Total project : 10 </p>
+        <p> Total project : 11 </p>
         <!-- <br> -->
         <br>
         <b style="color: darkred;font-size: 4vh;">Page view</b>
         <br>
         <br>
        
+        => Mini-calci :
+        <a target="_blank" href="https://github.com/SanjeetPrajapati/mini-calci">click</a>
+        <br>
+
         => Stop-Watch :
         <a target="_blank" href="https://sanjeetprajapati.github.io/Stop-Watch/">click</a>
         <br>
@@ -79,6 +83,10 @@
         <br>
         <b style="color: darkred;font-size: 4vh;">Codes : </b>
         <br>
+        <br>
+
+        >> Mini-calci :
+        <a target="_blank" href="https://sanjeetprajapati.github.io/mini-calci/">click</a>
         <br>
 
         >> Stop-Watch :
