--- a/index.html
+++ b/index.html
@@ -29,15 +29,19 @@
     </div>
 
     <div class="projects">
-        <p> Total project : 11 </p>
+        <p> Total project : 12 </p>
         <!-- <br> -->
         <br>
         <b style="color: darkred;font-size: 4vh;">Page view</b>
         <br>
         <br>
-       
+            
+        => Number Guessing Game using JS :
+        <a target="_blank" href="https://sanjeetprajapati.github.io/Number-Guessing-Game-in-JS/">click</a>
+        <br>
+
         => Mini-calci :
-        <a target="_blank" href="https://github.com/SanjeetPrajapati/mini-calci">click</a>
+        <a target="_blank" href="https://sanjeetprajapati.github.io/mini-calci/">click</a>
         <br>
 
         => Stop-Watch :
@@ -85,8 +89,12 @@
         <br>
         <br>
 
+        >> Number Guessing Game using JS :
+        <a target="_blank" href="https://github.com/SanjeetPrajapati/Number-Guessing-Game-in-JS">click</a>
+        <br>
+
         >> Mini-calci :
-        <a target="_blank" href="https://sanjeetprajapati.github.io/mini-calci/">click</a>
+        <a target="_blank" href="https://github.com/SanjeetPrajapati/mini-calci">click</a>
         <br>
 
         >> Stop-Watch :
