to do list added

--- a/index.html
+++ b/index.html
@@ -29,11 +29,15 @@
     </div>
 
     <div class="projects">
-        <p> Total project : 12 </p>
+        <p> Total project : 13 </p>
         <!-- <br> -->
         <br>
         <b style="color: darkred;font-size: 4vh;">Page view</b>
         <br>
+        <br>
+
+        => To Do List using React :
+        <a target="_blank" href="https://sanjeetprajapati.github.io/To-do-list-react-js/">click</a>
         <br>
             
         => Number Guessing Game using JS :
@@ -87,6 +91,10 @@
         <br>
         <b style="color: darkred;font-size: 4vh;">Codes : </b>
         <br>
+        <br>
+
+        => To Do List using React :
+        <a target="_blank" href="https://github.com/SanjeetPrajapati/To-do-list-react-js">click</a>
         <br>
 
         >> Number Guessing Game using JS :
