--- a/index.html
+++ b/index.html
@@ -29,11 +29,15 @@
     </div>
 
     <div class="projects">
-        <p> Total project : 13 </p>
+        <p> Total project : 14 </p>
         <!-- <br> -->
         <br>
         <b style="color: darkred;font-size: 4vh;">Page view</b>
         <br>
+        <br>
+
+        => Weather app :
+        <a target="_blank" href="https://sanjeetprajapati.github.io/weather-app/">click</a>
         <br>
 
         => To Do List using React :
@@ -91,6 +95,10 @@
         <br>
         <b style="color: darkred;font-size: 4vh;">Codes : </b>
         <br>
+        <br>
+
+        => Weather app :
+        <a target="_blank" href="https://github.com/SanjeetPrajapati/weather-app">click</a>
         <br>
 
         => To Do List using React :
