--- a/index.html
+++ b/index.html
@@ -29,11 +29,15 @@
     </div>
 
     <div class="projects">
-        <p> Total project : 14 </p>
+        <p> Total project : 15 </p>
         <!-- <br> -->
         <br>
         <b style="color: darkred;font-size: 4vh;">Page view</b>
         <br>
+        <br>
+
+        => The Fitness Club :
+        <a target="_blank" href="https://sanjeetprajapati.github.io/fitness-web/">click</a>
         <br>
 
         => Weather app :
@@ -95,6 +99,10 @@
         <br>
         <b style="color: darkred;font-size: 4vh;">Codes : </b>
         <br>
+        <br>
+
+        => The Fitness Club :
+        <a target="_blank" href="https://github.com/SanjeetPrajapati/fitness-web">click</a>
         <br>
 
         => Weather app :
